# khorkernel

./: RELEASE_NOTES_1.0.3.md  migrate_files.py  project_summary.md  pytest.ini  repo_dump.py
.khorkernel/: 00_principles.md  README.md  (+7 more)
khora-kernel/: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  repo_inspection.md
khora-kernel/.github/workflows/: kernel-ci.yml
khora-kernel/docs/ai_guide/: README.md  environment_layering.md  getting_started.md
khora-kernel/docs/research/: cross_platform_compatibility.md  manifest_layering_proposal.md  performance_profiling.md
khora-kernel/docs/sdk/: README.md  api_reference.md  plugin_development_guide.md
khora-kernel/examples/: README.md
khora-kernel/examples/custom_extension/: __init__.py  extension.py
khora-kernel/src/khora_kernel/extensions/core/: __init__.py  context_schema.json  manifest.py
khora-kernel/src/khora_kernel/sdk/: __init__.py  config.py  context.py  extension.py  templates.py
khora-kernel/src/khora_kernel_vnext/cli/: __init__.py  commands.py
khora-kernel/src/khora_kernel_vnext/extensions/ci_github_actions/: __init__.py  ci_workflow_yml.template  context_delta_yml.template  extension.py
khora-kernel/src/khora_kernel_vnext/sdk/: config.py  extension.py  templates.py  utils.py
khora-kernel/tests/: __init__.py  conftest.py  test_env_manifest_integration.py  test_mvk_integration.py  test_phase4_integration.py  test_precommit_integration.py
khora-kernel/tests/cli/: __init__.py  test_bump_version_integration.py  test_commands.py  test_diag_commands.py  test_plugin_commands.py  test_validate_manifest.py
khora-kernel/tests/extensions/ci_github_actions/: __init__.py  test_extension.py  test_security_gates.py  test_templates.py
khora-kernel/tests/extensions/core/: test_env_manifest.py  test_extension.py  test_manifest.py
khora-kernel/tests/extensions/docker/: __init__.py  test_database_broker.py  test_extension.py  test_templates.py
khora-kernel/tests/extensions/docs/: __init__.py  test_extension.py  test_templates.py
khora-kernel/tests/extensions/fastapi_scaffold/: test_context_enrichment.py  test_templates.py
khora-kernel/tests/extensions/kg/: __init__.py  test_extension.py  test_kg_precommit.py
khora-kernel/tests/extensions/playwright/: __init__.py  test_extension.py  test_templates.py
khora-kernel/tests/extensions/precommit/: __init__.py  test_extension.py
khora-kernel/tests/extensions/terraform/: __init__.py  test_extension.py  test_templates.py
khora-kernel/tests/sdk/: __init__.py  test_sdk_components.py
(+75 files in other folders)
